# nya

./: .gitignore  README.md  huffman_tree  requirements.txt
outputs/: bigtest.nya  br.nya  chappal.nya  fav2.nya  favorite.nya  flowers.nya  gradient.nya  icon.nya  test.nya  testerz.nya  use.nya
src/: app.py  engine.py  huffman.py  main.py  nyaviewer.py
viewer/: CMakeLists.txt  Makefile  nyaviewer.rc
viewer/assets/: icon.nya
viewer/nyadecoder/: CMakeLists.txt
viewer/nyadecoder/include/: Decoder.hpp
viewer/nyadecoder/src/: Decoder.cpp
viewer/src/: BitReader.cpp  BitReader.hpp  Decoder.cpp  Decoder.h  Decoder.hpp  main.cpp
